[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
authors = [{ name = "Frederik Peter Aalund", email = "fpa@sbtinstruments.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.12"
dependencies = []
description = "SBT Instruments' framework for Python-based applications"
name = "cyto"
readme = "README.md"
version = "0.0.0"

[project.urls]
repository = "https://github.com/sbtinstruments/cyto"

[project.optional-dependencies]
app = ["cyto[settings]", "anyio<5.0.0,>=4.4.0"]
cytio = ["cyto[model]", "anyio"]
cytio-tree = ["cyto[cytio]", "networkx<4.0,>=3.3"]
logging-rfc5424 = ["syslog-rfc5424-formatter<2.0.0,>=1.2.3"]
interval = ["portion<3.0.0,>=2.4.2"]
model = ["pydantic<3.0.0,>=2.9.2"]
settings = ["pydantic-settings<3.0.0,>=2.4.0"]
settings-cli-color = ["rich-argparse<2,>=1.7.1"]
settings-cli-completion = ["argcomplete<4,>=3.6.2"]
stout = ["cyto[model]", "cyto[interval]", "tinydb<5.0.0,>=4.8.0"]
db = ["pydantic<3.0.0,>=2.9.2", "sqlalchemy<3.0.0,>=2.0.35"]

[dependency-groups]
dev = [
    "pyfakefs<6.0.0,>=5.6.0",
    "pytest<9.0.0,>=8.3.2",
    "pytest-cov<6.0.0,>=5.0.0",
    "ruff<1.0.0,>=0.6.1",
    "mypy<2.0.0,>=1.13.0",
]
